I decided to fix my findClearPath() method by getting rid of all the if statements and using Mr. Das' strategy about crossing off the dead ends and backtracking through the maze.