@@ -11,53 +11,49 @@ public class Main {
     }
 
     public static String findClearPath(String[][] maze) {
-        int up;
-        int down;
-        int left;
-        int right;
-        StringBuilder path = new StringBuilder();
-        for(int row = 0;row < maze.length;row++){
-            for (int col = 0;col < maze[0].length;col++){
-                if (row - 1 >= 0){
-                    up = row;
-                    if (maze[up][col].equalsIgnoreCase(".")){
-                        path.append("(").append(up).append(",").append(col).append(") → ");
-                        maze[up][col] = "#";
-                    }
-                }
-                if (row + 1 <= maze.length){
-                    down = row;
-                    if (maze[down][col].equalsIgnoreCase(".")){
-                        path.append("(").append(down).append(",").append(col).append(") → ");
-                        maze[down][col] = "#";
-                    }
-                }
-                if (col - 1 >= 0){
-                    left = col;
-                    if (maze[row][left].equalsIgnoreCase(".")){
-                        path.append("(").append(row).append(",").append(left).append(") → ");
-                        maze[row][left] = "#";
-                    }
-                }
-                if (col + 1 <= maze[0].length){
-                    right = col;
-                    if (maze[row][right].equalsIgnoreCase(".")){
-                        path.append("(").append(row).append(",").append(right).append(") → ");
-                        maze[row][right] = "#";
-                    }
-                }
-                if (row == maze.length - 1 && col == maze[0].length - 1){
-                    int pathLength = path.length();
-                    path = new StringBuilder(path.substring(0, pathLength - 3));
-                }
-            }
+        if (maze == null || maze.length == 0 || maze[0] == null || maze[0].length == 0) {
+            return "Invalid maze";
         }
+        StringBuilder path = new StringBuilder();
+        boolean[][] visited = new boolean[maze.length][maze[0].length];
+        findClearPathHelper(maze, 0, 0, path, visited);
         return path.toString();
     }
+
+    public static boolean findClearPathHelper(String[][] maze, int row, int col, StringBuilder path, boolean[][] visited) {
+        if (row < 0 || row >= maze.length || col < 0 || col >= maze[0].length || visited[row][col] || maze[row][col].equals("#")) {
+            return false;
+        }
+
+        int pathLength = path.length(); // Store the current length of the path
+        path.append("(").append(row).append(",").append(col).append(") → ");
+        visited[row][col] = true;
+
+        if (row == maze.length - 1 && col == maze[0].length - 1) {
+            int rowDigits = String.valueOf(row).length();
+            int colDigits = String.valueOf(col).length();
+            path.deleteCharAt(pathLength + rowDigits + colDigits + 4);
+            return true;
+        }
+
+        int[] dx = {0, 0, 1, -1};
+        int[] dy = {1, -1, 0, 0};
+        for (int i = 0; i < 4; i++) {
+            int newRow = row + dx[i];
+            int newCol = col + dy[i];
+            if (findClearPathHelper(maze, newRow, newCol, path, visited)) {
+                return true;
+            }
+        }
+        // Backtrack by removing the last "(row,col) → " part added
+        path.setLength(pathLength);
+        visited[row][col] = false;
+        return false;
+    }
     public static void seeMaze(String[][] maze){
-        for (int r = 0; r < maze.length;r++){
-            for (int c = 0; c < maze[0].length;c++){
-                System.out.print(maze[r][c]);
+        for (String[] strings : maze) {
+            for (int c = 0; c < maze[0].length; c++) {
+                System.out.print(strings[c]);
             }
             System.out.println();
         }
@@ -74,12 +70,12 @@ public class Main {
             System.exit(1);
         }
 
-        ArrayList<String> fileData = new ArrayList<String>();
+        ArrayList<String> fileData = new ArrayList<>();
         while (s.hasNextLine())
             fileData.add(s.nextLine());
 
         int rows = fileData.size();
-        int cols = fileData.get(0).length();
+        int cols = fileData.getFirst().length();
 
         String[][] maze = new String[rows][cols];
 
